Fix mobile horizontal scroll

--- a/styles/revamp_style.css
+++ b/styles/revamp_style.css
@@ -19,7 +19,8 @@ body {
   height: 100%;
   color: #ddd;
   font-family: 'JetBrains Mono', monospace;
-  overflow: hidden;
+  max-width: 100% !important;
+  overflow: hidden !important;
 }
 
 nav {
@@ -91,12 +92,12 @@ main {
 }
 
 canvas#bg {
-  position: fixed;
-  top: 0;
   background: var(--primary-bg-color);
-  left: 0;
-  width: 100%;
-  height: 100%;
+  position: fixed;
+  inset: 0;
+  width: 100dvw;
+  height: 100dvh;
+  pointer-events: none;
   z-index: -1;
 }
 
